src/test/resources/annotator/Proto3IllegalRequiredFieldLabel.proto
syntax = "proto3";

package annotator;

message TestMessage {
    <error descr="Field label \"required\" is not allowed in proto3">required</error> int32 field = 1;
}